--- a/studentmanagment/Views/Students/Create.cshtml
+++ b/studentmanagment/Views/Students/Create.cshtml
@@ -15,7 +15,7 @@
 
     <div class="form-group">
         <label asp-for="DateOfBirth"></label>
-        <input asp-for="DateOfBirth" class="form-control" type="date" />
+<input asp-for="DateOfBirth" class="form-control" type="date" value="@DateTime.Today.ToString("yyyy-MM-dd")" />
         <span asp-validation-for="DateOfBirth" class="text-danger"></span>
     </div>
 
