--- a/studentmanagment/Views/Students/Index.cshtml
+++ b/studentmanagment/Views/Students/Index.cshtml
@@ -31,7 +31,7 @@
                         <ul>
                             @foreach (var subject in student.Subjects)
                             {
-                                <li>@subject</li>
+                                <li>@subject.Name</li>
                             }
                         </ul>
                     }
